workspace = { members = [ "encoder","ffi", "lpc"] }

[package]
name = "rsaac"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
arrayvec = "0.7.4"
c2rust-bitfields = "0.18.0"
encoder = { version = "0.1.0", path = "encoder" }
ffi = { version = "0.1.0", path = "ffi" }
ilog = "1.0.1"
itertools = "0.12.0"
libc = "0.2.150"
lpc = { version = "0.1.0", path = "lpc" }
once_cell = "1.18.0"
