workspace = { members = ["encoder", "ffi", "ffmpeg-src-macro", "lpc"] }

[package]
name = "raash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
encoder = { version = "0.1.0", path = "encoder" }
ffi = { version = "0.1.0", path = "ffi" }
ffmpeg-src-macro = { version = "0.1.0", path = "ffmpeg-src-macro" }
ilog = "1.0.1"
itertools = "0.12.0"
libc = "0.2.150"
lpc = { version = "0.1.0", path = "lpc" }
once_cell = "1.18.0"
reductor = "0.0.12"
